--- a/templates/index.html
+++ b/templates/index.html
@@ -4,34 +4,43 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AGENDA</title>
+  <title>Agenda de Contatos</title>
+  <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="static/neumorphism-ui.css">
 </head>
-<body>
-  <h1>Agenda de Contatos</h1>
-
-   <form action="/create" method="POST">
-    <input name="name" placeholder="Nome">
-    <input name="email" placeholder="E-mail">
-    <input name="phone" placeholder="Telefone">
-    <button type="submit">
-      Adicionar
-    </button>
-  </form>
-
-   <ul>
-    {% for item in contacts %}
-      <li>
-        <form action="/update/{{ loop.id }}" method="POST">
-            <input name="name" value="{{ item.name }}">
-            <input name="email" value="{{ item.email }}">
-            <input name="phone" value="{{ item.phone }}">
-            <button type="submit">Editar</button>
-        </form>
-        
-        <a href="/delete/{{loop.index0}}">❌</a>
-      </li>
-    {% endfor %} 
-  </ul>
+<body class="dark-mode">
+  <div class="sul-box-raised-2 container">
+    <h1>Agenda de Contatos</h1>
+    <!-- Formulário de criação de contacts -->
+    <form action="/create" method="POST">
+      <input class="sul-text-field" name="name" placeholder="Nome">
+      <input class="sul-text-field" name="email" placeholder="E-mail">
+      <input class="sul-text-field" name="phone" placeholder="Telefone">
+      <button class="sul-btn" type="submit">
+        Adicionar
+      </button>
+    </form>
   
+    <!-- Exibição da lista de contacts -->
+    <ul>
+      {% for item in contacts %}
+        <li>
+          {% if item.complete == True %}
+            <s>{{ item.name }}</s>
+          {% else %}
+            <form action="/update/{{ item.id }}" method="POST">
+              <input class="sul-text-field" name="name" value="{{item.name}}">
+              <input class="sul-text-field" name="email" value="{{item.email}}">
+              <input class="sul-text-field" name="phone" value="{{item.phone}}">
+              <button class="sul-btn" type="submit">
+                Editar
+              </button>
+            </form>
+          {% endif %}           
+          <a href="/delete/{{loop.index0}}">❌</a>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
 </body>
 </html>
