--- a/templates/flashing.html
+++ b/templates/flashing.html
@@ -4,20 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agenda</title>
+  <title>Flashing</title>
   <link rel="stylesheet" href="/static/style.css">
-  <link rel="stylesheet" href="/static/neumorphism-ui.css">
 </head>
-<body class="dark-mode">
-  <div class="sul-box-raised-2 container">
-    <h1>Login</h1>
-    <form action="/signin" method="POST">
-      <input class="sul-text-field" type="email" name="email" placeholder="E-mail">
-      <input class="sul-text-field" type="password" name="password" placeholder="Senha">
-      <button class="sul-btn" type="submit">Login</button>
-    </form>
-    <a href="/register">Registrar</a>
-  </div>
+<body>
+  <p>Flashing</p>
 
   {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages %}
