--- a/templates/register.html
+++ b/templates/register.html
@@ -5,17 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agenda</title>
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/neumorphism-ui.css">
 </head>
-<body>
-  <div>
+<body class="dark-mode">
+  <div class="sul-box-raised-2 container">
     <h1>Registrar</h1>
     <form action="/signup" method="POST">
-      <input type="name" placeholder="Nome">
-      <input type="email" name="email" placeholder="E-mail">
-      <input type="password" name="password" placeholder="Senha">
-      <button type="submit" >Registrar</button>
+      <input class="sul-text-field" type="name" placeholder="Nome">
+      <input class="sul-text-field" type="email" name="email" placeholder="E-mail">
+      <input class="sul-text-field" type="password" name="password" placeholder="Senha">
+      <button class="sul-btn" type="submit" >Registrar</button>
     </form>
     <a href="/login">Login</a>
   </div>
+
+  {% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+      <div class="messages">
+        {% for type, text in messages %}
+          <span class="{{ type }}"> {{ text }} </span>
+        {% endfor %}
+      </div>
+    {% endif %}
+  {% endwith %}
 </body>
 </html>
