--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flashing</title>
+  <title>AGENDA</title>
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/neumorphism-ui.css">
 </head>
 <body class="dark-mode">
   <div class="sul-box-raised-2 container">
-    <p>Flashing</p>
+    <h1>Hello World</h1>
   </div>
+  
   {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages %}
       <div class="messages">
