--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agenda</title>
+  <title>Agenda-Registrar</title>
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/neumorphism-ui.css">
 </head>
@@ -12,7 +12,7 @@
   <div class="sul-box-raised-2 container">
     <h1>Registrar</h1>
     <form action="/signup" method="POST">
-      <input class="sul-text-field" type="name" placeholder="Nome">
+      <input class="sul-text-field" type="name" name="name" placeholder="Nome">
       <input class="sul-text-field" type="email" name="email" placeholder="E-mail">
       <input class="sul-text-field" type="password" name="password" placeholder="Senha">
       <button class="sul-btn" type="submit" >Registrar</button>
